sdk/tests/snapshots/test_builder__builder_ca_jpg2.snap
---
source: sdk/tests/test_builder.rs
expression: "unescape_json(&Reader::from_stream(format, &mut dest)?.json())?"
---
{
  "active_manifest": "[MANIFEST_URN]",
  "manifests": {
    "[MANIFEST_URN]": {
      "claim_generator": "test/1.0 c2pa-rs/0.32.6",
      "claim_generator_info": [
        {
          "name": "test",
          "version": "1.0"
        },
        {
          "name": "c2pa-rs",
          "version": "0.32.6"
        }
      ],
      "format": "[FORMAT]",
      "instance_id": [XMP_ID]",
      "ingredients": [],
      "assertions": [
        {
          "label": "c2pa.actions.v2",
          "data": {
            "actions": [
              {
                "action": "c2pa.opened",
                "softwareAgent": {
                  "name": "TestApp",
                  "version": "1.0",
                  "something": "else"
                },
                "parameters": {
                  "description": "import"
                },
                "digitalSourceType": "http://cv.iptc.org/newscodes/digitalsourcetype/algorithmicMedia"
              }
            ]
          }
        }
      ],
      "signature_info": {
        "alg": "Ed25519",
        "issuer": "C2PA Test Signing Cert",
        "cert_serial_number": "638838410810235485828984295321338730070538954823"
      },
      "label": "[MANIFEST_URN]"
    }
  }
}
